@@ -8,14 +8,12 @@ import digit.models.coremodels.IdResponse;
 import org.egov.asset.repository.ServiceRequestRepository;
 import org.egov.common.contract.request.RequestInfo;
 import org.egov.tracer.model.CustomException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class IdgenUtil {
@@ -26,11 +24,13 @@ public class IdgenUtil {
     @Value("${egov.idgen.path}")
     private String idGenPath;
 
-    @Autowired
-    private ObjectMapper mapper;
+    private final ObjectMapper mapper;
+    private final ServiceRequestRepository restRepo;
 
-    @Autowired
-    private ServiceRequestRepository restRepo;
+    public IdgenUtil(ObjectMapper mapper, ServiceRequestRepository restRepo) {
+        this.mapper = mapper;
+        this.restRepo = restRepo;
+    }
 
     public List<String> getIdList(RequestInfo requestInfo, String tenantId, String idName, String idformat, Integer count) {
         List<IdRequest> reqList = new ArrayList<>();
@@ -44,9 +44,10 @@ public class IdgenUtil {
 
         List<IdResponse> idResponses = response.getIdResponses();
 
-        if (CollectionUtils.isEmpty(idResponses))
+        if (CollectionUtils.isEmpty(idResponses)) {
             throw new CustomException("IDGEN ERROR", "No ids returned from idgen Service");
+        }
 
-        return idResponses.stream().map(IdResponse::getId).collect(Collectors.toList());
+        return idResponses.stream().map(IdResponse::getId).toList();
     }
 }
